--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,21 +6,25 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Pedro Carvalhal de Mello e Souza | GitHub Username: PCarvalhalMS**\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, **Massachussetts**. Established in **1861**, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
-    "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
+    "The original MIT logo was created by **Muriel Cooper** and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
     "\n",
     "![](image.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Changes\n",
+    "\n",
+    "1. Minnesota -> Massachussetts (line 1)\n",
+    "2. 1422 -> 1861 (line 1)\n",
+    "3. Seymour Papert -> Muriel Cooper (line 5)"
+   ]
   }
  ],
  "metadata": {
